tests/neg/toplevel-doubledef/Test_2.scala
object Test extends App{
  hello("hello") // error: Cannot merge
}